# stallion_labs_SDK_take_home

./: .eslintrc.js  .gitignore  README.md  STAGE1_SETUP.md  package-lock.json  package.json  react-native-bitnet.podspec  run-stage2.js  tsconfig.json  tsconfig.run.json
.github/workflows/: ci.yml  release.yml
__mocks__/: react-native-blob-util.js
__tests__/: BitNetClient.test.ts  ChatTemplate.test.ts  HuggingFaceResolver.test.ts  InferenceEngine.test.ts  ModelManager.test.ts  quick_debug2.test.ts  stage2.integration.test.ts  stage3.integration.test.ts
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: bitnet_jni.cpp  bitnet_wrapper.cpp  bitnet_wrapper.h
android/src/main/java/com/bitnet/: BitNetModule.kt  BitNetPackage.kt  NativeBitNetSpec.kt
example/: app.json  index.js  metro.config.js  package-lock.json  package.json  tsconfig.json
example/android/: build.gradle  gradle.properties  gradlew  gradlew.bat  settings.gradle
example/android/app/: build.gradle  proguard-rules.pro
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/bitnetexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/src/: App.tsx  bitnet.ts
example/src/screens/: ChatScreen.tsx  HomeScreen.tsx  ModelsScreen.tsx
ios/: BitNetModule.h  BitNetModule.mm
src/: BitNetClient.js  BitNetClient.ts  ChatTemplate.ts  DownloadAdapter.js  DownloadAdapter.ts  HuggingFaceResolver.js  HuggingFaceResolver.ts  InferenceEngine.ts  ModelCache.js  ModelCache.ts  ModelManager.js  ModelManager.ts  NativeBitNet.js  NativeBitNet.ts  errors.js  errors.ts  index.js  index.ts  types.js  types.ts
